app/src/db/repositories/wort_review/snapshots/anki_sentences__db__repositories__wort_review__wort_review_test__test_worte_review_repo__bulk_upsert__[WortReview::bulk_upsert] - update.snap
---
source: app/src/db/repositories/wort_review/wort_review_test.rs
expression: snapshot
---
[
    SnapshotWortReview {
        wort_id: 1,
        direction: ES2DE,
        interval: 10,
        ease_factor: 1.3,
        repetitions: 1,
        last_review: 2026-12-10T12:00:00Z,
        next_review: 2020-12-20T12:00:00Z,
        created_at: "<created_at>",
        deleted_at: None,
    },
    SnapshotWortReview {
        wort_id: 1,
        direction: DE2ES,
        interval: 99,
        ease_factor: 99.9,
        repetitions: 9,
        last_review: 2027-01-10T12:00:00Z,
        next_review: 2009-01-20T12:00:00Z,
        created_at: "<created_at>",
        deleted_at: None,
    },
    SnapshotWortReview {
        wort_id: 2,
        direction: ES2DE,
        interval: 2,
        ease_factor: 2.5,
        repetitions: 333,
        last_review: 1999-01-10T12:00:00Z,
        next_review: 2099-01-20T12:00:00Z,
        created_at: "<created_at>",
        deleted_at: None,
    },
]
